--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ li a {
 <img src="images/logo.png" style="padding:10px;"height="40px" align="center" >
 </div>
 	<ul>
-	<li><a href="http://wii.sakinawak.tk"><img src="images/WSC.png" style="padding:20px;" width="190px" align="left" ></a>
+	<li><a href="http://wii.sakiwii.ml"><img src="images/WSC.png" style="padding:20px;" width="190px" align="left" ></a>
 	</li>
 	</ul> 
 	
