--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
 }
+.text {
+	text-align: center;
+}
 	</style>
 	</head>
 <body>
@@ -40,6 +43,9 @@ li a {
 	<ul>
 	<li><a href="http://wii.sakiwii.ml"><img src="images/WSC.png" style="padding:20px;" width="190px" align="left" ></a>
 	</li>
-	</ul> 
-	
+	</ul>
+</header>
+	<div class="text">
+	<p style="font-size: 30px;"><img src="images/Welcome.png" width="400px" ></p>
+	<p><br><br><img src="images/info.png" width="500px" ></p>
 </body>
