--- a/index.html
+++ b/index.html
@@ -9,49 +9,52 @@
     display: inline-block;
     width: 40%;
 }
+header {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+    border-spacing: 0 0;
+	background-color: #333;
+	}
+body {
+padding: 0;
+ margin: 0;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  border-spacing: 0 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.text {
+	text-align: center;
+}
 </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css" crossorigin="anonymous">
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">
-                        <img src="images/logo.png" height="50" alt="">
-                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="http://wii.sakiwii.ml">
-                        <img src="images/WSC.png" width="250" alt=""></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                  </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
-                </div>
-              </nav>
+	<header>
+		<div id="banner" align="center">
+	<img src="images/logo.png" style="padding:10px;"height="40px" align="center" >
+	</div>
+		<ul>
+		<li><a href="http://wii.sakiwii.ml"><img src="images/WSC.png" style="padding:20px;" width="190px" align="left" ></a>
+		</li>
+		</ul>
+	</header>
     <div class="text" align="center">
     <br>
     <br>
