--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>SakiWii</title>
+    <title>SakiWii</title>
 <style>
 .articles {
     display: inline-block;
@@ -41,38 +41,6 @@ li a {
 .text {
 	text-align: center;
 }
-.card {
-  width: 282px; /*1*/
-  margin: 0px auto; /*2*/
-  background-color: white; /*3*/
-  box-shadow: 0px 5px 20px #999; /*4*/
-}
-.card a { /*5*/
-  color: #333; 
-  text-decoration: none;
-}
-.card:hover .card-image img { /*6*/
-  width: 160%;
-  filter: grayscale(0);
-}
-.card-image {
-  height: 200px;/*1*/
-  position: relative;/*2*/
-  overflow: hidden;/*3*/
-}
-.card-image img {
-  width: 150%;/*4*/
-    /*5 - Méthode de centrage en fonction de la taille de l'image */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  filter: grayscale(1);/*6*/
-    /*7 - Transition */
-  transition-property: filter width; 
-  transition-duration: .3s;
-  transition-timing-function: ease;
-}
 </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css" crossorigin="anonymous">
@@ -95,22 +63,15 @@ li a {
 <div class="col-lg-25 col-md-5 col-sm-35 col-xs-12">
 <div class="articles">
 <p align="center">Sites</p>
-<div class="card">
-    <a href="http://wii.sakiwii.ml">
-        <div class="card-image"><img src="images/News1.jpg" alt="Orange" /></div>
+<div class="card" style="width: 18rem;">
+<img src="images/News1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <div class="card-date">
-                <time>11 Février 2019</time>
-            </div>
-            <div class="card-title">
-                <h3>Fausse Chaîne Boutique Wii</h3>
-            </div>
-            <div class="card-excerpt">
-                <p>La Fausse Chaîne boutique Wii permet de se souvenir de la Chaîne boutique Wii !<br><img src="images/loading.gif"></p>
-            </div>
+          <h5 class="card-title">Fausse Chaîne boutique Wii</h5>
+          <p class="card-text">La Fausse Chaîne boutique Wii permet de se souvenir de la Chaîne boutique Wii !<br><img src="images/loading.gif"</p>
+          <a href="http://wii.sakiwii.Ml" class="btn btn-primary">Accéder à la Chaîne !
+          </a>
         </div>
-    </a>
-</div>
+      </div>
 </div>
 </div>
           </div>
