--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 .articles {
     display: inline-block;
-    width: 40%;
+    width: 20%;
 }
 header {
     display: table;
@@ -59,8 +59,8 @@ li a {
     <br>
     <br>
     <img src="images/Welcome.png" width="400px">
-    </div>
-<div class="col-lg-25 col-md-5 col-sm-35 col-xs-12">
+		</div>
+<div class="col-lg-100 col-md-100 col-sm-35 col-xs-12">
 <div class="articles">
 <p align="center">Sites</p>
 <div class="card" style="width: 18rem;">
@@ -70,10 +70,16 @@ li a {
           <p class="card-text">La Fausse Chaîne boutique Wii permet de se souvenir de la Chaîne boutique Wii !<br><img src="images/loading.gif"</p>
           <a href="http://wii.sakiwii.Ml" class="btn btn-primary">Accéder à la Chaîne !
           </a>
-        </div>
-      </div>
+					</div>		
+		</div>
 </div>
+<div class="Info" align="center">
+		<h1>Qui Suis-Je ?</h1>
+		<p>Je suis SakiNawak et je fais revivre certaines choses à mes heures perdus x)<br>Ma console préféré est la Wii =3</p>
+		</div>
+
 </div>
+
           </div>
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
